# ripwm

./: CONTRIBUTING.md  Cargo.toml  ci.sh
.github/workflows/: ci.yml
src/: config.rs  cursor.rs  drawing.rs  input.rs  main.rs  state.rs  udev.rs  winit.rs
src/grabs/: move_grab.rs  resize_grab.rs
src/handlers/: compositor.rs  mod.rs  xdg_shell.rs
